# pocu_archive

./: .gitignore  SUMMARY.md
COMP2500/assignment1/atrix/: assignment 1.java
COMP2500/assignment1/꼬마돌돌이/: Blog.java
COMP2500/assignment1/최성수/: Assignment1.java
COMP2500/assignment2/Myeong/: Aperture.java  App.java  BannerSize.java  BusinessCard.java  BusinessCardSides.java  Calendar.java  Cart.java  Color.java  Orientation.java  PaperMaterial.java  ShippingOption.java  Size.java  Stamp.java  StampColor.java
COMP2500/assignment2/atrix/: App.java  Banner.java  BannerMaterial.java  BannerSize.java  BusinessCard.java  BusinessCardColor.java  BusinessCardType.java  (+8 more)
COMP2500/final/: docs.txt
POCU/COMP1500/: README.md
POCU/COMP2200/src/week4/: CMakeLists.txt
POCU/COMP2200/src/week4/formatting/: a.h  a.out  main.c
POCU/COMP2200/src/week4/get_length/: CMakeLists.txt  b.c  main.c
POCU/COMP2200/src/week4/my_buffer/: a.out  buffered_print.h
POCU/COMP2200/src/week4/my_compare_string/: a.c
POCU/COMP2200/src/week4/my_concat_string/: CMakeLists.txt  a.out  main.c
POCU/COMP2200/src/week4/my_copy_string/: CMakeLists.txt
POCU/COMP2200/src/week4/my_strstr/: a.c  a.h  a.out
POCU/COMP2200/src/week4/my_strtok/: CMakeLists.txt  a.h  main.c
POCU/COMP2200/src/week4/print_ascii_table/: CMakeLists.txt  a.c  a.out
POCU/COMP2200/src/week4/string_toupper_tolower/: CMakeLists.txt  a.c  a.h  main.c
old_note/COMP1500/: README.md
old_note/COMP2500/: script.js
pocu note/.obsidian/: graph.json  workspace.json
pocu note/COMP2300/: copilot_instruction.md  instruction.md
(+689 files in other folders)
